# gettext-mini

./: Makefile.am  README  configure.ac  project_status
src/lib/: Makefile.am
